# pluGET

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  consoleoutput.py  install_requirements.py  install_requirements_LINUX.sh  install_requirements_WINDOWS.bat  installer.bat  launcher.bat  launcher.sh  pluGET.py  pluget.py  plugin_downloader.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
old_src/: config.ini
old_src/handlers/: handle_config.py
old_src/plugin/: plugin_downloader.py  plugin_updatechecker.py
old_src/utils/: utilities.py
pluGET/: consoleoutput.py  handle_input.py  plugin_downloader.py  plugin_updatechecker.py  web_request.py
src/: __main__.py  config-sample.yaml  consoleoutput.py  handle_config.py  handle_input.py  handle_sftp.py  plugin_downloader.py  plugin_remover.py  plugin_updatechecker.py  settings.py  utilities.py  web_request.py
src/handlers/: handle_config.py  handle_ftp.py  handle_input.py  handle_server.py  handle_sftp.py
src/plugin/: plugin_downloader.py  plugin_remover.py  plugin_updatechecker.py
src/serverjar/: serverjar_checker.py  serverjar_paper.py  serverjar_paper_velocity_waterfall.py  serverjar_purpur.py  serverjar_updatechecker.py
src/servers/: ftp.py  local.py  sftp.py
src/tests/: all.py  test_plugin_updatechecker.py  test_plugin_utils.py  test_serverjar_paper_velocity_waterfall.py  test_serverjar_purpur.py
src/utils/: console_output.py  consoleoutput.py  utilities.py  web_request.py
