[tool.poetry]
name = "pluget"
version = "1.8.0"
description = "A powerful package manager which updates Plugins and Server Software for minecraft servers."
authors = ["Neocky", "An0nX"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
paramiko = "<3.0.0"
pysftp = "^0.2.9"
rich = "^9.13.0"
ruamel-yaml = "^0.17.21"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
types-requests = "^2.28.0"
types-paramiko = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
